code/SampleProgramToInterface/src/main/java/com/sample/bad/GodClass.java
package com.sample.bad;

public class GodClass {

    public boolean isRooted() {
        boolean a = true;
        boolean b = true;
        boolean c = true;
        boolean d = true;
        boolean e = true;

        return true;
    }
}  